--- a/.circleci/ansible/configure-server.yml
+++ b/.circleci/ansible/configure-server.yml
@@ -24,8 +24,8 @@
       changed_when: false
 
   environment:
-    - ENVIRONMENT: production
-    - NODE_ENV: production
+    # - ENVIRONMENT: production
+    # - NODE_ENV: production
     - TYPEORM_CONNECTION: "{{ lookup('env', 'TYPEORM_CONNECTION') }}"
     - TYPEORM_ENTITIES: "{{ lookup('env', 'TYPEORM_ENTITIES') }}"
     - TYPEORM_HOST: "{{ lookup('env', 'TYPEORM_HOST') }}"
